--- a/cheesecake.html
+++ b/cheesecake.html
@@ -38,7 +38,6 @@
     <ul>
         <li>1/4 cup heavy cream</li>
         <li>1/4 cup Irish cream liqueur (such as Baileys)
-
         </li>
         <li>1 teaspoon instant espresso powder
 
@@ -46,5 +45,64 @@
         <li>1 cup milk chocolate chips</li>
         <li>sweetened whipped cream for serving</li>
     </ul>
+    <h2>Directions</h2>
+    <h3>
+        Step 1
+    </h3>
+    <p>Preheat the oven to 350 degrees F (175 degrees C) with rack in lower third position. Lightly grease an 8-inch springform pan with cooking spray and line with parchment on the bottom.</p>
+    <h3>
+        Step 2
+    </h3>
+    <p>Process cookies in a food processor until ground into small crumbs, 2 to 3 minutes. Pour in melted butter and process for another 30 seconds.</p>
+    <h3>
+        Step 3
+    </h3>
+    <p>Press evenly into bottom and about 1 inch up sides of prepared pan.</p>
+    <h3>
+        Step 4
+    </h3>
+    <p>Bake in the preheated oven until firm and fragrant, 10 to 12 minutes. Let cool slightly while making the filling, about 10 minutes.
+
+    </p>
+    <h3>
+        Step 5
+    </h3>
+    <p>Reduce oven temperature to 300 degrees F (150 degrees C).</p>
+    <h3>
+        Step 6
+    </h3>
+    <p>Once crust is cooled, wrap bottom of pan with 2 layers of heavy-duty aluminum foil to prevent water from seeping into pan.</p>
+    <h3>
+        Step 7
+    </h3>
+    <p>To make the cheesecake filling: Add cream cheese to the bowl of a stand mixer fitted with the paddle attachment and beat on medium-low speed until creamy, about 2 minutes. Add sour cream, and beat on medium-low speed until fully combined, scraping down sides of bowl halfway through, about 2 minutes.</p>
+    <h3>
+        Step 8
+    </h3>
+    <p>Beat in sugar, espresso powder, vanilla, and salt, until combined, scraping down the sides of the bowl halfway through, about 1 minute. Add eggs, 1 at a time, beating on low speed just until combined after each addition and scraping down sides of bowl with a rubber spatula, 1 to 2 minutes.</p>
+    <h3>
+        Step 9
+    </h3>
+    <p>Add Baileys and beat on low speed until just combined, about 45 seconds.</p>
+    <h3>
+        Step 10
+    </h3>
+    <p>Pour filling onto cooled crust. Place springform pan into a larger roasting pan and place in preheated oven. Pour 1 1/2 cups of water in roasting pan and bake until the cheesecake is almost set (the center 2 inches should jiggle slightly) and edges have pulled away slightly from pan, 50 to 60 minutes.
+
+    </p>
+    <h3>
+        Step 11
+    </h3>
+    <p>Turn off oven and leave door cracked open about 7 to 8 inches; let cheesecake stand in oven 30 minutes. Remove from oven and carefully lift cheesecake from water bath. Cover and chill at least 3 hours or overnight.</p>
+    <h3>
+        Step 12
+    </h3>
+    <p>To make the ganache: Heat cream and Baileys in a small saucepan over medium heat until warm to the touch, 3 to 4 minutes. Stir in espresso powder until fully combined. Add chocolate chips and let stand 1 minute; stir until smooth.</p>
+    <h3>
+        Step 13
+    </h3>
+    <p>Remove cheesecake from pan and place on a cake plate. Pour ganache evenly over chilled cheesecake, spreading slightly over edges with an offset spatula. Refrigerate until ganache is firm, about 30 minutes.
+
+    </p>
 </body>
 </html>
