--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./cheesecake.html">Baileys Cheesecake</a>
+    <ul>
+        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
+        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
+        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
+    </ul>
+    
 </body>
 </html>
