Add new recipe page
Add a recipe page for the recipe website, One recipe is not enough,
even for a simple website.

Use unordered lists and semantic headings to create page, no sectioning
elements were used

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
-        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
+        <li><a href="./tagalogs.html">Homemade Tagalogs</a></li>
         <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
     </ul>
     
