Add alt description to tagalog image

--- a/tagalogs.html
+++ b/tagalogs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Homemade Tagalogs</h1>
-    <img src="https://www.allrecipes.com/thmb/CTyI7jq3vUW4_WwYZ4Wvq1Ec-yQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chocolate-Peanut-Butter-Cookies-4x3-1-2000-88e41df0a489434991a2d146cc13986d.jpg" alt="Baileys CheeseCake">
+    <img src="https://www.allrecipes.com/thmb/CTyI7jq3vUW4_WwYZ4Wvq1Ec-yQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chocolate-Peanut-Butter-Cookies-4x3-1-2000-88e41df0a489434991a2d146cc13986d.jpg" alt="Homemade Tagalog">
     <h2>Description</h2>
     <p>If you didn't get enough Tagalongs at the last Girls Scout cookie sale, no need to fret: you can make the classic cookies at home with this copycat recipe.
     </p>
