--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
         <li><a href="./tagalogs.html">Homemade Tagalogs</a></li>
-        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
+        <li><a href="./cookie.html">Mocha Cookie Bars</a></li>
     </ul>
     
 </body>
