Add images to each respective link

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./cheesecake.html">Baileys Cheesecake</a></li>
-        <li><a href="./tagalogs.html">Homemade Tagalogs</a></li>
-        <li><a href="./cookie.html">Mocha Cookie Bars</a></li>
+        <li>
+            <img src="https://www.allrecipes.com/thmb/OPo3yG5V0-Hsv-Ojs8jbpvftWLM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7255780-Baileys-Cheesecake-ddmfs-beauty-3x4-b7bdcc8d682645b9919a1b7047d48696.jpg" alt="Baileys CheeseCake">
+            <a href="./cheesecake.html">Baileys Cheesecake</a></li>
+        <li>
+            <img src="https://www.allrecipes.com/thmb/CTyI7jq3vUW4_WwYZ4Wvq1Ec-yQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Chocolate-Peanut-Butter-Cookies-4x3-1-2000-88e41df0a489434991a2d146cc13986d.jpg" alt="Homemade Tagalogs">
+            <a href="./tagalogs.html">Homemade Tagalogs</a></li>
+        <li>
+            <img src="https://www.allrecipes.com/thmb/CpahzlhOTwXmbYd5pPw11GV-teM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8537837_Mocha-Cookie-Bars_Kim_4x3-801cf381f67d49f78cccd5d424425afd.jpg" alt="Mocha Cookie Bars">
+            <a href="./cookie.html">Mocha Cookie Bars</a></li>
     </ul>
     
 </body>
